--- a/start-information-service/build.gradle
+++ b/start-information-service/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation "org.springframework.cloud:spring-cloud-starter-sleuth"
     implementation "org.springframework.cloud:spring-cloud-starter-netflix-hystrix"
     implementation "org.postgresql:postgresql:42.5.1"
+    implementation 'org.flywaydb:flyway-core:6.4.4'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.3.2.RELEASE'
 }
