STEP-28: Create unit and integration tests for "Protective equipment"

--- a/protective-equipment-service/build.gradle
+++ b/protective-equipment-service/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.3.2.RELEASE'
+    testImplementation "com.h2database:h2:1.4.199"
+    testImplementation project(path: ':start-information-service')
 }
 
 tasks.test {
