--- a/config-service/Dockerfile
+++ b/config-service/Dockerfile
@@ -1,4 +1,10 @@
+FROM gradle:6.9.4-jdk-alpine as builder
+COPY ./src src/
+COPY ./pom.xml pom.xml
+
+RUN gradle build -x test
+
 FROM openjdk:8-jdk-alpine
 EXPOSE 8080
-COPY build/libs/config-service-1.0-SNAPSHOT.jar app.jar
-ENTRYPOINT ["java", "-jar", "/app.jar"]
+COPY --from=builder build/*.jar app.jar
+ENTRYPOINT ["java", "-jar", "app.jar"]
